--- a/src/Components/CSS/home.css
+++ b/src/Components/CSS/home.css
@@ -1,6 +1,10 @@
 main{
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 105px;
+    padding-block: 20px;
 }
