--- a/src/navbar.css
+++ b/src/navbar.css
@@ -4,6 +4,9 @@ header{
     overflow: hidden;
     color: white;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    position: fixed;
+    z-index: 100;
+    top: 0;
 }
 
 nav{
@@ -42,3 +45,93 @@ nav h2{
 .planets-list p:hover{
     cursor: pointer;
 }
+
+.menu-btn{
+    display: none;
+    width: 25px;
+}
+
+.menu-btn:hover{
+    cursor: pointer;
+}
+
+.dropbox-container{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 2;
+    backdrop-filter: blur(20px);
+    top: 76px;
+}
+
+.dropbox-card{
+    width: 100%;
+    height: 100%;
+    background-color: #070724;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.dropbox-card p{
+    width: 100%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    height: 11%;
+    display: flex;
+    align-items: center;
+    font-family: "League Spartan", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 25px;
+    text-align: center;
+    letter-spacing: 1.36px;
+    justify-content: center;
+}
+
+.dropbox-card p:hover{
+    background-color: #d8d8d830;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 918px) {
+
+    header{
+        height: auto;
+        padding-block: 20px;
+    }
+
+    nav{
+        flex-direction: column;
+        gap: 20px;
+    }
+  }
+
+  @media screen and (max-width: 740px) {
+    .planets-list{
+        display: none;
+    }
+
+    .menu-btn{
+        display: flex;
+    }
+
+    nav{
+        flex-direction: row;
+        justify-content: space-around;
+        padding-inline: 0;
+    }
+  }
+
+  @media screen and (min-width: 740px) {
+    .dropbox-card{
+        display: none;
+    }
+
+    .dropbox-container{
+        display: none;
+    }
+  }
