--- a/src/navbar.css
+++ b/src/navbar.css
@@ -5,8 +5,9 @@ header{
     color: white;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     position: fixed;
-    z-index: 100;
+    z-index: 1000;
     top: 0;
+    background: #070724;
 }
 
 nav{
@@ -58,12 +59,13 @@ nav h2{
 .dropbox-container{
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     z-index: 2;
     backdrop-filter: blur(20px);
     top: 76px;
+    overflow-y: scroll;
 }
 
 .dropbox-card{
@@ -74,6 +76,7 @@ nav h2{
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin-top: 50px;
 }
 
 .dropbox-card p{
